--- a/index.html
+++ b/index.html
@@ -7,8 +7,24 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="header">
+    <div class="container">
+      <nav>
+        <img src="images/logo.jpg" class="logo">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
   
 </body>
 </html>
 
-<!-- ! mark to get the  -->
+<!-- ! :          mark to get the html -->
+<!--  #header :   to get the div with id called header -->
+<!-- .container:   to get div with class called container -->
